--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/add_action"
-        android:icon="@mipmap/add_ic"
+        android:id="@+id/search_action"
+        android:icon="@mipmap/search_ic"
         android:title="@string/add_post"
         app:showAsAction="always">
     </item>
@@ -13,6 +13,12 @@
     <item
         android:id="@+id/settings_action"
         android:title="@string/settings"
+        app:showAsAction="never">
+    </item>
+
+    <item
+        android:id="@+id/logout_action"
+        android:title="@string/log_out"
         app:showAsAction="never">
     </item>
 
