UPD: implement signIn MVP arch

--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -59,7 +59,7 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/signUp_in_btn"
+        android:id="@+id/signUp_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/signUp_confirm_password_et"
