--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -68,7 +68,7 @@
         android:layout_marginTop="26dp"
         android:background="@color/colorPrimary"
         android:shadowRadius="30"
-        android:text="@string/sign_up_btn"
+        android:text="@string/sign_up"
         android:textColor="@android:color/white" />
 
     <TextView
