Implemented Settings Window (MVP), bug fixed in SignIn

--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.draxvel.simpleblog.SetupActivity">
+    tools:context="com.draxvel.simpleblog.settings.SettingsActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/setup_tv"
@@ -16,7 +16,7 @@
 
     <ProgressBar
         android:id="@+id/setup_pb"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="invisible"
