--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -16,7 +16,7 @@
 
     <ProgressBar
         android:id="@+id/setup_pb"
-        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="invisible"
@@ -32,7 +32,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/setup_profile_iv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:layout_marginTop="50dp"
             android:src="@mipmap/default_image" />
 
