--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -15,33 +15,40 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme" />
 
-    <ImageView
-        android:id="@+id/new_post_iv"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:scaleType="centerCrop"
-        android:background="@mipmap/image_ic"
-        app:layout_constraintTop_toBottomOf="@+id/new_post_tb"
-        tools:layout_editor_absoluteX="-2dp" />
-
-    <EditText
-        android:id="@+id/new_post_et"
-        android:layout_margin="40dp"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/add_description"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        app:layout_constraintTop_toBottomOf="@+id/new_post_iv" />
+        android:orientation="vertical"
+        android:padding="40dp">
 
-    <Button
-        android:id="@+id/new_post_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="40dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/post_it"
-        android:textColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@+id/new_post_et" />
+
+        <ImageView
+            android:id="@+id/new_post_iv"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="50dp"
+            android:background="@mipmap/add_ic"/>
+
+        <EditText
+            android:id="@+id/new_post_et"
+            android:layout_marginTop="40dp"
+            android:maxLength="125"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/add_description"
+            android:ems="10"
+            android:inputType="textMultiLine"
+            app:layout_constraintTop_toBottomOf="@+id/new_post_iv" />
+
+        <Button
+            android:id="@+id/new_post_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:background="@color/colorPrimary"
+            android:text="@string/post_it"
+            android:textColor="@android:color/white"
+            app:layout_constraintTop_toBottomOf="@+id/new_post_et" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
