--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.draxvel.simpleblog.NewPostActivity">
+    tools:context="com.draxvel.simpleblog.newpost.NewPostActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/new_post_tb"
@@ -14,6 +14,16 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme" />
+
+    <ProgressBar
+        android:id="@+id/new_post_pb"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:layout_constraintTop_toBottomOf="@+id/new_post_tb" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
