--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="50dp"
-            android:background="@mipmap/add_ic"/>
+            android:background="@mipmap/add_photo_to_post_ic"/>
 
         <EditText
             android:id="@+id/new_post_et"
