moved MainActivity and created bottom nav view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.draxvel.simpleblog.MainActivity">
+    tools:context="com.draxvel.simpleblog.main.MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/main_tb"
@@ -15,23 +15,35 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme" />
 
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/main_bnv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_tb">
+    </FrameLayout>
+
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_post_fab"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/main_bnv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@mipmap/add_new_post_ic"
-        android:layout_marginRight="16dp" />
+        app:srcCompat="@mipmap/add_new_post_ic" />
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
+        android:id="@+id/main_bnv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_menu">
     </android.support.design.widget.BottomNavigationView>
 
 </android.support.constraint.ConstraintLayout>
