--- a/app/src/main/res/layout/blog_list_item.xml
+++ b/app/src/main/res/layout/blog_list_item.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="25dp">
 
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:id="@+id/main_post_cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="0dp"
-                android:layout_height="238dp"
+                android:layout_height="256dp"
                 android:layout_marginTop="16dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +87,6 @@
 
         </android.support.constraint.ConstraintLayout>
 
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
