--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.draxvel.simpleblog.newpost.NewPostActivity">
+    tools:context=".ui.newpost.NewPostActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/new_post_tb"
