--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.draxvel.simpleblog.settings.SettingsActivity">
+    tools:context=".ui.settings.SettingsActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/setup_tv"
