--- a/app/src/main/res/layout/blog_list_item.xml
+++ b/app/src/main/res/layout/blog_list_item.xml
@@ -94,6 +94,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/desc_tv"
+                android:tag="dislike"
                 app:srcCompat="@mipmap/fav_ico"
                 android:layout_marginLeft="8dp" />
 
