--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,10 +5,66 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.account.AccountFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <?xml version="1.0" encoding="utf-8"?>
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="account" />
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".ui.settings.SettingsActivity">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/setup_tv"
+            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.Toolbar>
+
+        <ProgressBar
+            android:id="@+id/setup_pb"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="invisible"
+            app:layout_constraintTop_toBottomOf="@+id/setup_tv" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="40dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/setup_profile_iv"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginTop="50dp"
+                android:src="@mipmap/default_image" />
+
+            <TextView
+                android:id="@+id/name_tv"
+                android:textAlignment="center"
+                android:layout_marginTop="50dp"
+                android:inputType="textPersonName"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/users_posts_list_rv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
+
+
+
+
+
+
+    </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
