--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.account.AccountFragment">
 
-    <?xml version="1.0" encoding="utf-8"?>
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -54,7 +53,7 @@
                 />
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/users_posts_list_rv"
+                android:id="@+id/account_posts_list_rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
